Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-35770

XCB: ASSERT on application launch (invalid index in QString::at() from src/plugins/platforminputcontexts/compose/generator/qtablegenerator.cpp compose/generator/qtablegenerator.cpp:355)

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • None
    • 5.2.1
    • Core: Other
    • None
    • qtbase stable (260fe985255c46fd2eb0aff378da8dccb5f2703f)
      Fedora 20, nvidia driver, libxcb version 1.9.1
    • 3f5060a60129225d8860b16953038fc9a214c1c1

    Description

      When launching GUI applications (such as the analogclock example), they all immediately assert with the attached backtrace (seems to be xcb platform plugin related).

      This occurs for me reliably on stable right now, but not on release. Stable sha1 in env, relese sha1 (good) was 313a74cc4a9a5d200b2059d3d8767fe1a274c50d.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            paeglis Gatis Paeglis
            aalpert Alan Alpert
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes