Compose: Fix assert for non-UTF8 locales in table generator

Task-number: QTBUG-35770
Change-Id: I8aaea66e8d70edf7ab401f2c6dfb849d309ff6af
Reviewed-by: Gatis Paeglis <gatis.paeglis@digia.com>

cregit: 3f5060a60129225d8860b16953038fc9a214c1c1 https://github.com/qt/qtbase/commit/3f5060a60129225d8860b16953038fc9a214c1c1